--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -46,30 +46,32 @@
 				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
 					role="button" th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a>
 				<a th:href="@{#{urldoc}+'1084_1613789997'}" class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a>	
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
 		<form action="#" th:action="@{/essaim/statistiques}" method="get" id="rucherForm">
-			<div class="mb-3 row">
-				<label for="rucherId" th:text="#{rucher}" class="col-sm-2 col-form-label"></label>
-				<select class="form-control col-sm-10" id="rucherId" name="rucherId">
-					<option th:text="#{tous}" value="0" th:selected="0 == (${rucherId}==null?'0':${rucherId})">
-					</option>
-					<option th:each="rucheropt : ${rucherIdNom}" th:value="${rucheropt.id}" th:text="${rucheropt.nom}"
-						th:selected="${rucheropt.id} == (${rucherId}==null?'0':${rucherId})">
-					</option>
-				</select>
-			</div>
-			<div class="input-group mb-3 row">
+			<div class="mb-1 row">
+				<label for="rucherId" th:text="#{rucher}" class="col-sm-1 col-form-label"></label>
+
+				<div class="col-sm-2">
+
+					<select class="form-control" id="rucherId" name="rucherId">
+						<option th:text="#{tous}" value="0" th:selected="0 == (${rucherId}==null?'0':${rucherId})">
+						</option>
+						<option th:each="rucheropt : ${rucherIdNom}" th:value="${rucheropt.id}"
+							th:text="${rucheropt.nom}"
+							th:selected="${rucheropt.id} == (${rucherId}==null?'0':${rucherId})">
+						</option>
+					</select>
+				</div>
 				<div class="form-check col-sm-2 ">
 					<input class="form-check-input" type="checkbox" id="masquerInactif" name="masquerInactif"
 						th:checked="${masquerInactif}" />
 					<label class="form-check-label" for="masquerInactif" th:text="#{masquerInactif}"></label>
 				</div>
 				<input class="col-sm-1 btn btn-outline-primary btn-sm" type="submit" th:value="#{filtrer}" />
-			</div>
 		</form>
 	</div>
 	<div class="container-fluid">
