--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -73,6 +73,8 @@
 					th:title="#{histoRucheRucher}" aria-hidden="true"></a>
 				&nbsp; <a th:href="@{'/essaim/poids/'+${essaim.id}}" class="bi-graph-up" th:title="#{courbePoids}"
 					aria-hidden="true"></a>
+				&nbsp; <a th:href="@{'/essaim/statistiques/'+${essaim.id}}" class="bi-table"
+					th:title="#{statistiquesproduction}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
