--- a/src/main/resources/templates/essaim/essaimStat.html
+++ b/src/main/resources/templates/essaim/essaimStat.html
@@ -53,7 +53,7 @@
 		</form>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="statistiques">
+		<table class="table table-bordered table-striped table-sm" id="essaim">
 			<thead>
 				<tr>
 					<th th:text="#{essaim}"></th>
@@ -84,6 +84,36 @@
 			</tbody>
 		</table>
 	</div>
+
+	<div class="container-fluid">
+		<table class="table table-bordered table-striped table-sm" id="recoltes">
+			<thead>
+				<tr>
+					<th th:text="#{recolte}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{MoyenneE}"></th>
+					<th th:text="#{EcartTypeE}"></th>
+					<th th:text="#{poidsMielHausses}"></th>
+					<th th:text="#{Note}"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="rec, i : ${recolteList}">
+					<td><a th:href="@{'/recolte/'+${rec.id}}"
+							th:text="${#temporals.format(rec.date, 'yyyy/MM/dd HH:mm')}"></a></td>
+					<td>
+						<a th:href="@{'/rucher/'+${rucherList[i.index].id}}" th:text="${rucherList[i.index].nom}"></a>
+					</td>
+					<td class=" num" th:text="${#numbers.formatDecimal(avgRecList[i.index],1,2)}"></td>
+					<td class="num" th:text="${#numbers.formatDecimal(stdRecList[i.index],1,2)}"></td>
+					<td th:text="${#numbers.formatDecimal(poidsRecList[i.index],1,2)}"></td>
+					<td th:text="${#numbers.formatDecimal(noteEssList[i.index],1,2)}"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+
 	<footer th:replace="~{include::footer}"></footer>
 </body>
 
