--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -168,17 +168,19 @@
 						<th th:text="#{commentaire}"></th>
 					</tr>
 				</thead>
-				<tbody>
-					<tr th:each="ruche : ${ruches}">
+				<tbody th:with="f='dd/MM/yyyy'">
+					<tr th:each="ruche, i : ${ruches}" th:with="ec=${listeEvenCadre[i.index]}">
 						<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
 						<td><a th:href="@{'/essaim/'+${ruche.essaim?.id}}" th:text="${ruche.essaim?.nom}"></a></td>
 						<td th:if="${session.voirInactif}" th:text="${ruche.active}? #{oui} : #{non}"></td>
 						<td th:text="${ruche.dateAcquisition}"></td>
 						<td class="num" th:text="${#numbers.formatDecimal(ruche.poidsVide,1,2,'DEFAULT')}"></td>
-						<td class="num" th:text="${nbCadres[rucheStat.index]}"></td>
+						<td class="num"
+							th:text="${ec == null}?'':${#numbers.formatInteger(ec.valeur,2)}+' '+${#temporals.format(ec.date, f)}+' '+${ec.commentaire}">
+						</td>
 						<td class="num" th:text="${ruche.type?.nbCadresMax}"></td>
 						<td th:text="${ruche.type?.nom}"></td>
-						<td class="num" th:text="${listNbHausses[rucheStat.index]}"></td>
+						<td class="num" th:text="${listNbHausses[i.index]}"></td>
 						<td th:text="${ruche.commentaire}"></td>
 					</tr>
 				</tbody>
