liste ruches avec parcours, recherche eve par essaim

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/extras/spring-security"j>
+	xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 </head>
