--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		/* globals DataTable bootstrap */
 		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
@@ -43,37 +44,45 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
-					role="button" th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a>
-				<a th:href="@{#{urldoc}+'1084_1613789997'}" class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a>
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
+					data-bs-trigger="focus" tabindex="0" role="button"
+					th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a> <a
+					th:href="@{#{urldoc}+'1084_1613789997'}" class="bi-book"
+					th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<form action="#" th:action="@{/essaim/statistiques}" method="get" id="rucherForm">
+		<form action="#" th:action="@{/essaim/statistiques}" method="get"
+			id="rucherForm">
 			<div class="mb-1 row">
-				<label for="rucherId" th:text="#{rucher}" class="col-sm-1 col-form-label"></label>
+				<label for="rucherId" th:text="#{rucher}"
+					class="col-sm-1 col-form-label"></label>
 				<div class="col-sm-2">
 					<select class="form-control" id="rucherId" name="rucherId">
-						<option th:text="#{tous}" value="0" th:selected="0 == (${rucherId}==null?'0':${rucherId})">
+						<option th:text="#{tous}" value="0"
+							th:selected="0 == (${rucherId}==null?'0':${rucherId})">
 						</option>
-						<option th:each="rucheropt : ${rucherIdNom}" th:value="${rucheropt.id}"
-							th:text="${rucheropt.nom}"
+						<option th:each="rucheropt : ${rucherIdNom}"
+							th:value="${rucheropt.id}" th:text="${rucheropt.nom}"
 							th:selected="${rucheropt.id} == (${rucherId}==null?'0':${rucherId})">
 						</option>
 					</select>
 				</div>
 				<div class="form-check col-sm-2 ">
-					<input class="form-check-input" type="checkbox" id="masquerInactif" name="masquerInactif"
-						th:checked="${masquerInactif}" />
-					<label class="form-check-label" for="masquerInactif" th:text="#{masquerInactif}"></label>
+					<input class="form-check-input" type="checkbox" id="masquerInactif"
+						name="masquerInactif" th:checked="${masquerInactif}" /> <label
+						class="form-check-label" for="masquerInactif"
+						th:text="#{masquerInactif}"></label>
 				</div>
-				<input class="col-sm-1 btn btn-outline-primary btn-sm" type="submit" th:value="#{filtrer}" />
+				<input class="col-sm-1 btn btn-outline-primary btn-sm" type="submit"
+					th:value="#{filtrer}" />
+			</div>
 		</form>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm" id="statistiques">
+		<table class="table table-bordered table-striped table-sm"
+			id="statistiques">
 			<thead>
 				<tr>
 					<th th:text="#{essaim}"></th>
@@ -90,16 +99,18 @@
 			</thead>
 			<tbody>
 				<tr th:each="essaimPoids : ${essaimsPoids}">
-					<td><a th:href="@{'/essaim/'+${essaimPoids.id}}" th:text="${essaimPoids.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${essaimPoids.id}}"
+						th:text="${essaimPoids.nom}"></a></td>
 					<td th:text="${essaimPoids.dateAcquisition}"></td>
-					<td th:unless="${masquerInactif}" th:text="${essaimPoids.dateDispersion}"></td>
+					<td th:unless="${masquerInactif}"
+						th:text="${essaimPoids.dateDispersion}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.duree}"></td>
 					<td th:text="${essaimPoids.pTotal}"></td>
 					<td th:text="${essaimPoids.pMax}"></td>
 					<td th:text="${essaimPoids.pMin}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.pMoyen}"></td>
-					<td><a th:href="@{'/essaim/statistiques/'+${essaimPoids.id}}" th:text="${essaimPoids.note}"></a>
-					</td>
+					<td><a th:href="@{'/essaim/statistiques/'+${essaimPoids.id}}"
+						th:text="${essaimPoids.note}"></a></td>
 					<td th:text="${essaimPoids.nbrec}"></td>
 				</tr>
 			</tbody>
