--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:inline="javascript">
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:inline="javascript">
 		/* globals DataTable */
 		document.addEventListener('DOMContentLoaded', () => {
 			const distCalc = /*[[#{distCalc}]]*/ null;
@@ -38,39 +39,44 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{Distances}+' '"></th:block>
-					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<a th:href="@{'/rucher/'+${rucher.id}}"
+						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 				</h1>
 			</div>
 			<div class="col">
-				<a id="dist" th:href="@{'/rucher/dist'}" class="bi-truck-front" th:title="#{distances}" aria-hidden="true"></a>
-				&nbsp;
-				<a id="distreset" th:href="@{'/rucher/dist?reset=true'}" class="bi-truck-front" th:title="#{distancesReset}"
-					aria-hidden="true" style="color:red"></a>
+				<a id="dist" th:href="@{'/rucher/dist'}" class="bi-truck-front"
+					th:title="#{distances}" aria-hidden="true"></a> &nbsp; <a
+					id="distreset" th:href="@{'/rucher/dist?reset=true'}"
+					class="bi-truck-front" th:title="#{distancesReset}"
+					aria-hidden="true" style="color: red"></a>
 			</div>
 		</div>
-		<div class="container-fluid">
-			<table class="table table-bordered table-striped table-sm" id="distsRuchers">
-				<thead>
-					<tr>
-						<th th:text="#{rucher}"></th>
-						<th th:text="#{DistanceV}"></th>
-						<th th:text="#{TempsV}"></th>
-						<th th:text="#{DistanceO}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="rr : ${rrs}">
-						<td><a th:text="${rr.nom}" th:href="@{'/rucher/'+${rr.id}}"></td>
-						<td
-							th:text="${dist[rrStat.index] == 0} ? '' : ${#numbers.formatDecimal(dist[rrStat.index],1,3)}">
-						</td>
-						<td th:text="${#temporals.format(temps[rrStat.index], 'HH:mm')}"></td>
-						<td th:text="${#numbers.formatDecimal(distOiseau[rrStat.index],1,3)}"></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<footer th:replace="~{include::footer}"></footer>
+	</div>
+	<div class="container-fluid">
+		<table class="table table-bordered table-striped table-sm"
+			id="distsRuchers">
+			<thead>
+				<tr>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{DistanceV}"></th>
+					<th th:text="#{TempsV}"></th>
+					<th th:text="#{DistanceO}"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="rr : ${rrs}">
+					<td><a th:text="${rr.nom}" th:href="@{'/rucher/'+${rr.id}}"></a></td>
+					<td
+						th:text="${dist[rrStat.index] == 0} ? '' : ${#numbers.formatDecimal(dist[rrStat.index],1,3)}">
+					</td>
+					<td th:text="${#temporals.format(temps[rrStat.index], 'HH:mm')}"></td>
+					<td
+						th:text="${#numbers.formatDecimal(distOiseau[rrStat.index],1,3)}"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<footer th:replace="~{include::footer}"></footer>
 </body>
 
 </html>
