--- a/src/main/resources/templates/recolte/recolteChoixHausses.html
+++ b/src/main/resources/templates/recolte/recolteChoixHausses.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
-	<script th:replace="~{include :: jsruches}"></script>
-	<script th:inline="javascript">
-		/* exported urlRetrait, urlAjout, recolteId, selHausRet, selHausAjout, DataTable */
-		const urlRetrait = /*[[@{/recolte/retraitHausses/}]]*/null;
-		const urlAjout = /*[[@{/recolte/ajoutHausses/}]]*/null;
-		const recolteId = /*[[${recolte.id}]]*/null;
-		const selHausRet = /*[[#{selecthaussesretirer}]]*/null;
-		const selHausAjout = /*[[#{selecthaussesajouter}]]*/null;
-	</script>
+<head
+	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
+<script th:inline="javascript">
+	/* exported urlRetrait, urlAjout, recolteId, selHausRet, selHausAjout, DataTable */
+	const urlRetrait = /*[[@{/recolte/retraitHausses/}]]*/null;
+	const urlAjout = /*[[@{/recolte/ajoutHausses/}]]*/null;
+	const recolteId = /*[[${recolte.id}]]*/null;
+	const selHausRet = /*[[#{selecthaussesretirer}]]*/null;
+	const selHausAjout = /*[[#{selecthaussesajouter}]]*/null;
+</script>
 </head>
 
 <body>
@@ -27,8 +28,8 @@
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{#{urldoc}+'3782_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a>
+				<a th:href="@{#{urldoc}+'3782_3476563104'}" class="bi-book"
+					th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -36,7 +37,8 @@
 		<h6>
 			<a id="retirerHausses" href="#" th:text="#{retirerHausses}"></a>
 		</h6>
-		<table class="table table-bordered table-striped table-sm" id="retraitHausseRecolte">
+		<table class="table table-bordered table-striped table-sm"
+			id="retraitHausseRecolte">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
@@ -57,10 +59,23 @@
 			</tbody>
 		</table>
 		<br />
-		<h6>
-			<a id="ajouterHausses" href="#" th:text="#{ajouterHausses}"></a>
-		</h6>
-		<table class="table table-bordered table-striped table-sm" id="ajoutHausseRecolte">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<h6 class="item">
+						<a id="ajouterHausses" href="#" th:text="#{ajouterHausses}"></a>
+					</h6>
+				</div>
+				<div class="col">
+					<span class="padicons"> <input type="checkbox" id="toutes"
+						th:title="#{AffTtHausse}" th:checked="${tth}" /> <label
+						for="toutes" th:text="#{ToutesH}"></label>
+					</span>
+				</div>
+			</div>
+		</div>
+		<table class="table table-bordered table-striped table-sm"
+			id="ajoutHausseRecolte">
 			<thead>
 				<tr>
 					<th th:text="#{nom}"></th>
